2006-02-10  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/Utilities.java:
	(getTabbedTextOffset): Fixed usage of variable p0.
	(getPositionAbove): Rewritten.
	(getPositionBelow): Rewritten.

2006-02-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/BoxView.java
	(getAxis): Added @since tag.
	(setAxis): Added @since tag.
	(layoutChanged): Added @since tag.
	(isLayoutValid): Added @since tag.
	(paint): Don't call setSize here. This is done in RootView already.
	(getMaximumSpan): Reimplemented to return the requirements'
	maximum size. Added API docs.
	(getMinimumSpan): New method.
	(layout): Fixed layout order.
	(modelToView): Call layout instead of setSize here.
	(getResizeWeight): New method.
	(getChildAllocation): New method.
	(forwardUpdate): New method.
	(viewToModel): New method.
	(flipEastEndWestEnds): New method.
	* javax/swing/text/CompositeView.java
	(modelToView): Made this method more robust by returning a default
	location if it's not possible to calculate one via the children.
	This default location returns the left or right edge of this
	view.
	(createDefaultLocation): New helper method.
	* javax/swing/text/IconView.java
	(modelToView): Don't throw BadLocationException. This should
	really only be thrown if the position is outside the document
	model, not if it's outside the view's boundary.

2006-02-09  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* tools/Makefile.am: Handle rmi and giop folders separately.

2006-02-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/SpinnerDateModel.java: Updated API docs all over,
	* javax/swing/SpinnerNumberModel.java: Likewise.

2006-02-09  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/SpinnerDateModel.java: Removed tabs,
	* javax/swing/SpinnerNumberModel.java: Likewise.

2006-02-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* doc/unicode/SpecialCasing-4.0.0.txt: New file.
	* doc/unicode/UnicodeData-4.0.0.txt: New file.
